--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "db:setup-test-data": "npx tsx ./testing/databaseTestData.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -27,11 +31,13 @@
     "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "slugify": "^1.6.6",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.19.2"
+    "tsx": "^4.19.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "typescript": "^5",
