--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "hugeicons-react": "^0.3.0",
     "lucide-react": "^0.456.0",
     "next": "14.2.16",
+    "next-auth": "^4.24.10",
     "next-pwa": "^5.6.0",
     "prisma": "^5.22.0",
     "react": "^18",
