--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -15,16 +15,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Setup Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Setup bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: 20 # Specify the Node.js version
+          bun-version: latest
 
       # Install dependencies
       - name: Install dependencies
-        run: npm install
+        run: bun i
 
       # Run linting
       - name: Run lint
-        run: npm run lint
+        run: bun lint
