--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "db:setup-test-data": "npx tsx ./testing/databaseTestData.ts"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
