--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,8 @@ prisma/migrations/*
 *.db-journal
 
 .env
+
+**/public/sw.js
+**/public/sw.js.map
+**/public/workbox-*.js
+**/public/workbox-*.js.map
