--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "hugeicons-react": "^0.3.0",
     "lucide-react": "^0.456.0",
     "next": "14.2.16",
     "next-pwa": "^5.6.0",
     "prisma": "^5.22.0",
     "react": "^18",
+    "react-aria-components": "^1.4.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "slugify": "^1.6.6",
