--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/ttm-sm.png",
+      "src": "/icons/ttm-sm.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/ttm-lg.png",
+      "src": "/icons/ttm-lg.png",
       "sizes": "512x512",
       "type": "image/png"
     }
