--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@types/qs": "^6.9.17",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -37,6 +38,7 @@
     "next-auth": "^4.24.10",
     "next-pwa": "^5.6.0",
     "prisma": "^5.22.0",
+    "qs": "^6.13.1",
     "react": "^18",
     "react-aria-components": "^1.4.1",
     "react-day-picker": "8.10.1",
