--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.2",
+    "vaul": "^1.1.1",
     "winston": "3",
     "winston-telegram": "2",
     "zod": "^3.23.8"
