--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "lint": "tsc --noEmit && next lint",
     "deploy-dev:setup": "npx prisma migrate dev --name init && npx tsx ./testing/databaseTestData.ts --force && npm run build",
     "db:migrate": "npx prisma migrate dev",
-    "db:setup-test-data": "npx tsx ./testing/databaseTestData.ts"
+    "db:setup-test-data": "npx tsx ./testing/databaseTestData.ts",
+    "prod:initial-setup": "bun prod:setup-db && npx tsx ./scripts/setup.ts",
+    "prod:setup-db": "npx tsx ./scripts/createDBFile.ts && bun db:migrate",
+    "prod:build": "bun prod:set-manifest && bun run build",
+    "prod:set-manifest": "npx tsx ./scripts/setManifest.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -34,6 +38,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "hugeicons-react": "^0.3.0",
     "lucide-react": "^0.456.0",
     "next": "14.2.16",
