fix: add prod deployment script

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prod:setup": "npx tsx ./scripts/setup.ts",
     "prod:setup-db": "npx tsx ./scripts/createDBFile.ts && npm run db:migrate",
     "prod:set-manifest": "npx tsx ./scripts/setManifest.ts",
-    "prod:deploy": "npm run prod:setup && npm run prod:setup-db && npm run prod:set-manifest && npm run build"
+    "prod:deploy": "npm run prod:setup-db && npm run prod:setup && npm run prod:set-manifest && npm run build"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
