--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prod:setup": "npx tsx ./scripts/setup.ts",
     "prod:setup-db": "npx tsx ./scripts/createDBFile.ts && npm run db:migrate",
     "prod:set-manifest": "npx tsx ./scripts/setManifest.ts",
-    "prod:deploy": "npm run prod:setup-db && npm run prod:setup && npm run prod:set-manifest && npm run build"
+    "prod:deploy": "npm run prod:setup-db && npm run prod:setup && npm run prod:set-manifest && npm run build",
+    "import-games": "npx tsx ./scripts/mytt/importGames.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -44,6 +45,7 @@
     "next": "14.2.16",
     "next-auth": "^4.24.10",
     "next-pwa": "^5.6.0",
+    "node-html-parser": "^7.0.1",
     "prisma": "^5.22.0",
     "qs": "^6.13.1",
     "react": "^18",
