--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -34,8 +35,11 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@react-email/components": "^0.0.33",
     "@types/qs": "^6.9.17",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -52,6 +56,7 @@
     "react-aria-components": "^1.4.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
+    "react-email": "^3.0.7",
     "react-hook-form": "^7.53.2",
     "slugify": "^1.6.6",
     "sqlite3": "^5.1.7",
