--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "prod:setup-db": "npx tsx ./scripts/createDBFile.ts && npm run db:migrate",
     "prod:set-manifest": "npx tsx ./scripts/setManifest.ts",
     "prod:deploy": "npm run prod:setup-db && npm run prod:setup && npm run prod:set-manifest && npm run build",
-    "import-games": "npx tsx ./scripts/mytt/importGames.ts"
+    "import-games": "npx tsx ./scripts/mytt/importGames.ts",
+    "email:dev": "email dev",
+    "email:test": "npx tsx ./scripts/test.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -52,12 +54,13 @@
     "node-html-parser": "^7.0.1",
     "prisma": "^5.22.0",
     "qs": "^6.13.1",
-    "react": "^18",
+    "react": "^19.0.0",
     "react-aria-components": "^1.4.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^19.0.0",
     "react-email": "^3.0.7",
     "react-hook-form": "^7.53.2",
+    "resend": "^4.1.2",
     "slugify": "^1.6.6",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.5.4",
