feat: implement password reset functionality and update email template

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,6 @@ CLUB_SLUG=your-slug
 CLUB_INITIAL_ADMIN_EMAIL=your-email
 CLUB_NAME=Club Name
 
+# For email sending
+RESEND_API_KEY=yourKey
+RESEND_EMAIL_FROM=your-email
