--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "next": "14.2.16",
     "next-auth": "^4.24.10",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.4.6",
     "node-html-parser": "^7.0.1",
     "prisma": "^5.22.0",
     "qs": "^6.13.1",
