fix: use postgres database

--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "next": "next dev",
+    "dev": "concurrently -p \"[{name}]\" -n \"db,next\" -c \"blue.bold,blue.bold\" \"bun db:run > NUL 2>&1\" \"bun db:wait-for-connection && bun db:migrate-deploy && bun db:setup-test-data && bun next\"",
     "build": "next build",
     "start": "next start",
     "lint": "tsc --noEmit && next lint",
-    "deploy-dev:setup": "npx prisma migrate dev --name init && npx tsx ./testing/databaseTestData.ts --force && npm run build",
-    "db:migrate": "npx prisma migrate dev --name init",
+    "0": "------------------[database]------------------",
+    "db:run": "docker run -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=password -e POSTGRES_DB=devdb -p 5432:5432 postgres",
+    "db:wait-for-connection": "wait-port localhost:5432",
+    "db:migrate": "npx prisma migrate dev",
+    "db:migrate-deploy": "npx prisma migrate deploy",
     "db:setup-test-data": "npx tsx ./testing/databaseTestData.ts",
+    "1": "--------------------[dev]---------------------",
+    "dev:deploy": "npx tsx ./testing/databaseTestData.ts --force && npm run build",
+    "2": "-------------------[prod]---------------------",
     "prod:setup": "npx tsx ./scripts/setup.ts",
-    "prod:setup-db": "npx tsx ./scripts/createDBFile.ts && npm run db:migrate",
     "prod:set-manifest": "npx tsx ./scripts/setManifest.ts",
-    "prod:deploy": "npm run prod:setup-db && npm run prod:setup && npm run prod:set-manifest && npm run build",
+    "prod:deploy": "npm run prod:setup && npm run prod:set-manifest && npm run build",
+    "3": "-------------------[other]--------------------",
     "import-games": "npx tsx ./scripts/mytt/importGames.ts",
     "email:dev": "email dev",
     "email:test": "npx tsx ./scripts/test.ts"
@@ -45,6 +52,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "concurrently": "^9.1.2",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "hugeicons-react": "^0.3.0",
@@ -69,6 +77,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.19.2",
     "vaul": "^1.1.1",
+    "wait-port": "^1.1.0",
     "winston": "3",
     "winston-telegram": "2",
     "zod": "^3.23.8",
