--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "2": "-------------------[prod]---------------------",
     "prod:setup": "npx tsx ./scripts/setup.ts",
     "prod:set-manifest": "npx tsx ./scripts/setManifest.ts",
-    "prod:deploy": "npm run prod:setup && npm run prod:set-manifest && npm run build",
+    "prod:deploy": "npm run db:migrate-deploy && npm run prod:setup && npm run build",
     "3": "-------------------[other]--------------------",
     "import-games": "npx tsx ./scripts/mytt/importGames.ts",
     "email:dev": "email dev",
