--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@react-email/components": "^0.0.33",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.3",
     "@types/qs": "^6.9.17",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -72,6 +75,7 @@
     "react-email": "^3.0.7",
     "react-hook-form": "^7.53.2",
     "resend": "^4.1.2",
+    "semantic-release": "^24.2.7",
     "slugify": "^1.6.6",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.5.4",
