feat: implement match synchronization feature with UI components for managing match inconsistencies

--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "prod:set-manifest": "npx tsx ./scripts/setManifest.ts",
     "prod:deploy": "npm run db:migrate-deploy && npm run prod:setup && npm run build",
     "3": "-------------------[other]--------------------",
-    "import-games": "npx tsx ./scripts/mytt/importGames.ts",
     "import-players": "npx tsx ./scripts/mytt/import-players.ts",
     "check-tt-api-sync": "npx tsx ./testing/scheduled/check-tt-api-sync.test.ts",
     "email:dev": "email dev",
@@ -44,6 +43,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@react-email/components": "^0.0.33",
@@ -66,6 +66,7 @@
     "node-html-parser": "^7.0.1",
     "prisma": "^5.22.0",
     "qs": "^6.13.1",
+    "radix-ui": "^1.4.3",
     "react": "^18.2.0",
     "react-aria-components": "^1.4.1",
     "react-day-picker": "8.10.1",
