--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "next start",
     "lint": "tsc --noEmit && next lint",
     "0": "------------------[database]------------------",
-    "db:run": "docker run -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=password -e POSTGRES_DB=devdb -p 5432:5432 postgres",
+    "db:run": "docker run -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=password -e POSTGRES_DB=devdb -p 5432:5432 --name ttm-postgres postgres",
     "db:wait-for-connection": "wait-port localhost:5432",
     "db:migrate": "npx prisma migrate dev",
     "db:migrate-deploy": "npx prisma migrate deploy",
@@ -28,73 +28,73 @@
     "email:test": "npx tsx ./scripts/test.ts"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^8.0.0",
-    "@hookform/resolvers": "^3.9.1",
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^5.22.0",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-collapsible": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.10",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-popover": "^1.1.10",
-    "@radix-ui/react-radio-group": "^1.3.6",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "^0.0.33",
-    "@types/qs": "^6.9.17",
-    "axios": "^1.7.7",
+    "@types/qs": "^6.14.0",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
-    "class-variance-authority": "^0.7.0",
+    "bcryptjs": "^3.0.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "concurrently": "^9.1.2",
+    "concurrently": "^9.2.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "hugeicons-react": "^0.3.0",
     "lucide-react": "^0.456.0",
-    "next": "14.2.16",
-    "next-auth": "^4.24.10",
+    "next": "14.2.33",
+    "next-auth": "^4.24.13",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "node-html-parser": "^7.0.1",
     "prisma": "^5.22.0",
-    "qs": "^6.13.1",
+    "qs": "^6.14.0",
     "radix-ui": "^1.4.3",
-    "react": "^18.2.0",
-    "react-aria-components": "^1.4.1",
+    "react": "^18.3.1",
+    "react-aria-components": "^1.13.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-email": "^3.0.7",
-    "react-hook-form": "^7.53.2",
-    "resend": "^4.1.2",
-    "semantic-release": "^24.2.7",
+    "react-hook-form": "^7.68.0",
+    "resend": "^4.8.0",
+    "semantic-release": "^24.2.9",
     "slugify": "^1.6.6",
     "sqlite3": "^5.1.7",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.19.2",
-    "vaul": "^1.1.1",
+    "tsx": "^4.21.0",
+    "vaul": "^1.1.2",
     "wait-port": "^1.1.0",
-    "winston": "3",
-    "winston-telegram": "2",
-    "zod": "^3.23.8",
-    "zustand": "^5.0.3"
+    "winston": "^3.19.0",
+    "winston-telegram": "^2.7.0",
+    "zod": "^3.25.76",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
+    "typescript": "^5.9.3",
+    "@types/node": "^20.19.26",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.16"
   }
 }
